[package]
name = "stm32f4-02-neopixel"
version = "0.1.0"
authors = ["Greg Woods <gregwoodslancs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "*"
nb = "*"
cortex-m = "*"
cortex-m-rt = "*"
cortex-m-semihosting = "*"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "*"

smart-leds = "*"
# ws2812-spi = "*"

[dependencies.ws2812-timer-delay]
git = "https://github.com/jacobrosenthal/ws2812-timer-delay-rs.git"
branch = "clarify-timings"
#path = "../ws2812-timer-delay-rs"
version = "*"
features = []


# apa102-spi = "*"


[dependencies.stm32f4xx-hal]
version = "*"
features = ["rt", "stm32f411"]


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3