[package]
name = "stm32f4-04-neopixel-spi"
version = "0.1.0"
authors = ["Greg Woods <gregwoodslancs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "*"
nb = "*"
cortex-m = "*"
cortex-m-rt = "*"
cortex-m-semihosting = "*"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "*"


smart-leds = "*"
ws2812-spi = "*"
#{ version = "*", path="../ws2812-spi-rs" }


# use my fork, which clears the OVR status before each write
[dependencies.stm32f4xx-hal]
version = "*"
git = "https://github.com/GregWoods/stm32f4xx-hal"
features = ["rt", "stm32f411"]



#  https://doc.rust-lang.org/cargo/reference/profiles.html
#  Test and bench profile not currently used by me

